--- a/FISC/src/app/pages/social-labors/social-labors.component.html
+++ b/FISC/src/app/pages/social-labors/social-labors.component.html
@@ -1,3 +1,12 @@
+<div class="align-middle items-center">
+  <button
+    routerLink="/addp"
+    type="button"
+    class="focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 m-5"
+  >
+    Nuevo
+  </button>
+</div>
 <div class="grid grid-cols-3 gap-4">
   <div *ngFor="let places of listPlaces" class="p-2">
     <a
